--- a/d3-challenge/assets/css/d3Style.css
+++ b/d3-challenge/assets/css/d3Style.css
@@ -46,7 +46,7 @@
   line-height: 1;
   line-height: 1.5em;
   color: #fff;
-  text-align: center;
+  text-align: left;
   text-transform: capitalize;
   background: rgba(0, 0, 0, 0.8);
   border-radius: 4px;
